# oms-backend

./: .env.example  .gitignore  CMakeLists.txt
config/: env_loader.cpp  env_loader.hpp  settings.cpp  settings.hpp
src/: CMakeLists.txt  main.cpp
src/adapters/deribit/: DeribitClient.cpp  DeribitClient.hpp
src/api/: http_server.cpp  http_server.h  router.cpp  router.h
src/auth/: SessionManager.cpp  SessionManager.hpp
src/core/: application.cpp
src/domain/: Order.hpp  Types.hpp
src/factory/: ExchangeFactory.cpp  ExchangeFactory.hpp
src/interfaces/: IExchange.hpp
src/models/: LoginRequest.hpp
src/service/: OMSService.cpp  OMSService.hpp
src/utils/: logger.cpp  logger.h
